src/objects/Plantel__c.object
<CustomObject>
    <fields>
        <fullName>Abreviatura__c</fullName>
        <label>Abreviatura</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle__c</fullName>
        <label>Calle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad__c</fullName>
        <label>Ciudad</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodigoPostal__c</fullName>
        <label>Código postal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colonia__c</fullName>
        <label>Colonia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordenadas__c</fullName>
        <label>Coordenadas</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinador__c</fullName>
        <label>Coordinador</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelegaMunicipio__c</fullName>
        <label>Delegación/Municipio</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estado</label>
        <referenceTo>Ubicacion__c</referenceTo>
        <relationshipLabel>Planteles</relationshipLabel>
        <relationshipName>Planteles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IdInstituto__c</fullName>
        <externalId>true</externalId>
        <label>Id Instituto</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IdInterno__c</fullName>
        <externalId>true</externalId>
        <label>IdInterno</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IncorporadoSEP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incorporado a la SEP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instituto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instituto</label>
        <referenceTo>Instituto__c</referenceTo>
        <relationshipLabel>Planteles</relationshipLabel>
        <relationshipName>Planteles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumeroExterior__c</fullName>
        <label>Número exterior</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumeroInterior__c</fullName>
        <label>Número interior</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pais__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>País</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ubicacion__c.TipoUbicacion__c</field>
                <operation>equals</operation>
                <value>País</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ubicacion__c</referenceTo>
        <relationshipLabel>Planteles (País)</relationshipLabel>
        <relationshipName>PaisPlantel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlantelDep__c</fullName>
        <label>Plantel dep</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RazonSocial__c</fullName>
        <label>Razón social</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEP__c</fullName>
        <label>SEP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sede__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sede</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TelefonoPlantel__c</fullName>
        <label>Teléfono plantel</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TipoPlantel__c</fullName>
        <label>Tipo plantel</label>
        <picklist>
            <picklistValues>
                <fullName>Sitio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sede</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Plantel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>IdInterno__c</columns>
        <columns>Instituto__c</columns>
        <columns>IdInstituto__c</columns>
        <columns>NAME</columns>
        <columns>Abreviatura__c</columns>
        <columns>Calle__c</columns>
        <columns>Colonia__c</columns>
        <columns>Ciudad__c</columns>
        <columns>Estado__c</columns>
        <columns>Pais__c</columns>
        <columns>CodigoPostal__c</columns>
        <columns>Coordinador__c</columns>
        <columns>SEP__c</columns>
        <columns>Sede__c</columns>
        <columns>PlantelDep__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Plantel</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planteles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>